compiler/tests/en/errors/noret_rettype.salam
// EXPECT: E012
noret func bad() i32:
    while true:
    end
end

func main:
    bad()
end
